Fix iOS mobile layout bug and input cover bug

--- a/src/app/chat/chat-mobile/chat-mobile.component.css
+++ b/src/app/chat/chat-mobile/chat-mobile.component.css
@@ -25,7 +25,7 @@
   margin: 10px;
 }
 .chat-window-input{
-  width: 100%;
+  width: 95%;
   height:60px;
   position: fixed;
   bottom: 0;
@@ -43,11 +43,11 @@
   /*z-index:99;*/
 }
 .chat-window-input textarea{
-  width: 70%;
+  width: 60%;
   border: 1px solid #bbb;
   outline: none;
   padding: 5px;
-  resize: none;
+  /*resize: none;*/
   height:38px;
 }
 
